Fixed image offset so it's fully visible and added alt-text

--- a/front-end-nano/mws-restaurant-stage-1-master/css/styles.css
+++ b/front-end-nano/mws-restaurant-stage-1-master/css/styles.css
@@ -259,6 +259,7 @@ nav h1 a {
 }
 #restaurant-img {
   width: 100%;
+  margin-top: 70px
 }
 #restaurant-address {
   font-size: 12pt;
